# covrs

./: .gitignore  Cargo.toml  README.md  action.yml  schema.sql
.github/workflows/: ci.yml  release.yml
scripts/: ci.sh  fuzz.sh  gen_cobertura.py  release.sh  selfcov.sh
src/: cli.rs  db.rs  detect.rs  diff.rs  error.rs  example.rs  github.rs  ingest.rs  lib.rs  main.rs  model.rs  report.rs
src/parsers/: clover.rs  cobertura.rs  gocover.rs  istanbul.rs  jacoco.rs  lcov.rs  mod.rs
tests/: clover.rs  cobertura.rs  db.rs  diff.rs  gocover.rs  ingest.rs  istanbul.rs  lcov.rs  merge.rs  selfcov.rs
tests/common/: mod.rs
tests/fixtures/: cobertura_branch_in_method_and_class.xml  cobertura_no_sources.xml  empty_cobertura.xml  empty_jacoco.xml  jacoco_no_package.xml  sample_clover.xml
tests/fixtures/diffs/: deleted_file.diff  modified_file.diff
tests/fuzz/: .gitignore  Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_clover.rs  fuzz_cobertura.rs  fuzz_diff.rs  fuzz_gocover.rs  fuzz_istanbul.rs  fuzz_jacoco.rs  fuzz_lcov.rs
tests/fuzz/seed_corpus/fuzz_clover/: clover_branch_partial.xml  clover_no_path.xml  empty_clover.xml  malformed_clover.xml
tests/fuzz/seed_corpus/fuzz_cobertura/: cobertura_multiple_sources.xml  coverage.xml  malformed_cobertura.xml  sample_cobertura.xml  selfcov_cobertura.xml
tests/fuzz/seed_corpus/fuzz_diff/: multiple_files.diff  new_file.diff  no_newline_at_eof.diff
tests/fuzz/seed_corpus/fuzz_gocover/: gocover_no_mode.gocov  gocover_overlapping.gocov  gocover_set_mode.gocov  sample.gocov
tests/fuzz/seed_corpus/fuzz_istanbul/: istanbul_same_line.json  sample_istanbul.json
tests/fuzz/seed_corpus/fuzz_jacoco/: malformed_jacoco.xml  sample_jacoco.xml
tests/fuzz/seed_corpus/fuzz_lcov/: lcov_negative_counts.lcov  lcov_no_end_of_record.lcov  sample.lcov  selfcov.lcov
