[package]
name = "covrs"
version = "0.1.0"
edition = "2021"
description = "Code coverage ingestion and reporting"
license = "MIT"
repository = "https://github.com/scott/covrs"
readme = "README.md"
keywords = ["coverage", "lcov", "cobertura", "reporting"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = ["tests/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.31"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
