[package]
name = "covrs"
version = "0.2.7"
edition = "2021"
description = "Code coverage ingestion and reporting"
license = "MIT"
repository = "https://github.com/scttnlsn/covrs"
readme = "README.md"
keywords = ["coverage", "lcov", "cobertura", "istanbul", "reporting"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = ["tests/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.31"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
